# PPD_Lab1_C

./: CMakeLists.txt  ConvolutionsThreadedColumns.cpp  ConvolutionsThreadedColumns.h  convolutionsThreadedRows.cpp  convolutionsThreadedRows.h  main.cpp  utils.cpp  utils.h
